# paredros-debugger

./: .gitignore  README.md  pyproject.toml  readme.md  requirements.txt
Regest/: RegestParser.py
Samples/Regest/: Lexer.g4  Regest.g4  RegestLexer.py  RegestParser.py  input.txt
Samples/Simpleton/: Simpleton_Reg.g4  Simpleton_RegLexer.py  Simpleton_RegParser.py
Simpleton/: Simpleton_Reg.g4
paredros-debugger/: CustomErrorHandler.py  CustomParser.py  DetailedParseListener.py  LookaheadVisualizer.py  ParseInformation.py  ParseInformations.py  ParseNode.py  ParseTraversal.py  cli.py  new_cli.py  utils.py
paredros_debugger/: CustomErrorHandler.py  CustomLexer.py  CustomParser.py  DetailedParseListener.py  LookaheadVisualizer.py  ModifyGrammarParserFile.py  ParseInformation.py  ParseNode.py  ParseStep.py  ParseTraceTree.py  ParseTraversal.py  ParseTreeExplorer.py  TokenInfo.py  UserGrammar.py  cli.py  modify_grammar_parser_file.py  new_cli.py  utils.py
tests/: parse_information_functions.py
