[project]
name = "paredros_debugger"
version = "0.0.1"
authors = [
  { name="Daniel Motz", email="daniel.motz@uni-jena.de" },
  { name="Patrick Stahl", email="patrick.stahl@uni-jena.de" },
  { name="Georg Zwilling", email="georg.zwilling@uni-jena.de" },
]
description = "A tool to debug ANTLR-generated parsers."
readme = "readme.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://mephisto.uni-jena.de"
Issues = "https://gitlab.com/mephisto-jena/predros-debugger/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
